# envo

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
src/: lib.rs  main.rs  nix_bootstrap.rs  self_update.rs  telemetry.rs  templates.rs
src/activate/: mod.rs  snapshot.rs
src/cli/: commands.rs  mod.rs
src/lockfile/: mod.rs  resolver.rs
src/lsp/: completion.rs  diagnostics.rs  hover.rs  mod.rs
src/manifest/: mod.rs  schema.rs
src/mcp/: mod.rs  protocol.rs  resources.rs  tools.rs
src/realize/: mod.rs  shim.rs
templates/cpu-pytorch/: manifest.toml
templates/cuda-pytorch/: demo.sh  manifest.toml
tests/: activate_tests.rs  lockfile_tests.rs  lsp_tests.rs  manifest_tests.rs  mcp_tests.rs  nix_bootstrap_tests.rs  realize_tests.rs  self_update_tests.rs
tests/integration/: test_activate.sh  test_cuda_demo.sh  test_error_cases.sh  test_full_workflow.sh  test_init.sh  test_install.sh  test_installer.sh  test_lazy_fetch.sh  test_lsp.sh  test_mcp.sh  test_nix_bootstrap.sh  test_self_update.sh  test_telemetry.sh
